--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>si.fri.prpo</groupId>
     <artifactId>prpo-vaje-servlet</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.2-RELEASE</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
