--- a/storitve/pom.xml
+++ b/storitve/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
-            <artifactId>kumuluzee-jta</artifactId>
+            <artifactId>kumuluzee-jta-common</artifactId>
         </dependency>
         <dependency>
             <groupId>si.fri.prpo.zvestoba</groupId>
