Naloga 5 delana skupaj na vaah

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>kumuluzee-servlet-jetty</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.kumuluz.ee</groupId>
+            <artifactId>kumuluzee-jax-rs-jersey</artifactId>
+        </dependency>
+        <dependency>
             <groupId>si.fri.prpo.zvestoba</groupId>
             <artifactId>storitve</artifactId>
         </dependency>
