Uporaba kumulzee-rest končana

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kumuluzee.version>2.4.1</kumuluzee.version>
         <postgresql.version>42.1.4</postgresql.version>
+        <kumuluzee-rest.version>1.1.0</kumuluzee-rest.version>
     </properties>
 
     <dependencyManagement>
@@ -53,6 +54,11 @@
                 <groupId>si.fri.prpo.zvestoba</groupId>
                 <artifactId>entitete</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kumuluz.ee.rest</groupId>
+                <artifactId>kumuluzee-rest-core</artifactId>
+                <version>${kumuluzee-rest.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
