--- a/storitve/pom.xml
+++ b/storitve/pom.xml
@@ -24,6 +24,10 @@
             <groupId>si.fri.prpo.zvestoba</groupId>
             <artifactId>entitete</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.rest</groupId>
+            <artifactId>kumuluzee-rest-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
