OpenAPI3.0, Swagger deluje. Zbrane Točke OA3.0 anotiran!

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,6 +28,10 @@
             <groupId>si.fri.prpo.zvestoba</groupId>
             <artifactId>storitve</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.openapi</groupId>
+            <artifactId>kumuluzee-openapi</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -44,6 +48,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <specificationConfig>
+                        <includeSwaggerUI>true</includeSwaggerUI>
+                    </specificationConfig>
+                </configuration>
             </plugin>
         </plugins>
     </build>
