--- a/MicroServices/zvestoba/api/src/main/resources/config.yaml
+++ b/MicroServices/zvestoba/api/src/main/resources/config.yaml
@@ -9,3 +9,7 @@ kumuluzee:
       username: postgres
       password: postgres
       max-pool-size: 20
+rest-properties:
+  external-services:
+    ponudniki-storitev:
+      base-url: "http://localhost:8081/v1"
