--- a/MicroServices/zvestoba/dockerfile
+++ b/MicroServices/zvestoba/dockerfile
@@ -4,8 +4,8 @@ RUN mkdir /app
 
 WORKDIR /app
 
-ADD ./target/ /app
+ADD ./api/target/api-1.0.0-SNAPSHOT.jar /app
 
-EXPOSE 8081:8081
+EXPOSE 8080:8080
 
-CMD ["java", "-jar", "zvestoba-0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "api-1.0.0-SNAPSHOT.jar"]
