--- a/MicroServices/zvestoba/api/src/main/resources/config.yaml
+++ b/MicroServices/zvestoba/api/src/main/resources/config.yaml
@@ -12,4 +12,4 @@ kumuluzee:
 rest-properties:
   external-services:
     ponudniki-storitev:
-      base-url: "http://192.168.99.100:8081/v1"
+      base-url: "https://aa-ponudniki-storitev.herokuapp.com/v1"
