--- a/MicroServices/zvestoba/pom.xml
+++ b/MicroServices/zvestoba/pom.xml
@@ -25,6 +25,7 @@
         <postgresql.version>42.1.4</postgresql.version>
         <kumuluzee-rest.version>1.1.0</kumuluzee-rest.version>
         <kumuluzee-openapi.version>1.0.0-SNAPSHOT</kumuluzee-openapi.version>
+        <version.rabbitmq>5.0.0</version.rabbitmq>
     </properties>
 
     <dependencyManagement>
@@ -65,6 +66,11 @@
                 <groupId>com.kumuluz.ee.openapi</groupId>
                 <artifactId>kumuluzee-openapi</artifactId>
                 <version>${kumuluzee-openapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.rabbitmq</groupId>
+                <artifactId>amqp-client</artifactId>
+                <version>${version.rabbitmq}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
