--- a/MicroServices/zvestoba/storitve/pom.xml
+++ b/MicroServices/zvestoba/storitve/pom.xml
@@ -28,6 +28,10 @@
             <groupId>com.kumuluz.ee.rest</groupId>
             <artifactId>kumuluzee-rest-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
