--- a/MicroServices/zvestoba/api/pom.xml
+++ b/MicroServices/zvestoba/api/pom.xml
@@ -32,6 +32,10 @@
             <groupId>com.kumuluz.ee.openapi</groupId>
             <artifactId>kumuluzee-openapi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kumuluz.ee.cors</groupId>
+            <artifactId>kumuluzee-cors</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
