--- a/MicroServices/zvestoba/pom.xml
+++ b/MicroServices/zvestoba/pom.xml
@@ -26,6 +26,7 @@
         <kumuluzee-rest.version>1.1.0</kumuluzee-rest.version>
         <kumuluzee-openapi.version>1.0.0-SNAPSHOT</kumuluzee-openapi.version>
         <version.rabbitmq>5.0.0</version.rabbitmq>
+        <kumuluzee-cors.version>1.1.0-SNAPSHOT</kumuluzee-cors.version>
     </properties>
 
     <dependencyManagement>
@@ -71,6 +72,11 @@
                 <groupId>com.rabbitmq</groupId>
                 <artifactId>amqp-client</artifactId>
                 <version>${version.rabbitmq}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kumuluz.ee.cors</groupId>
+                <artifactId>kumuluzee-cors</artifactId>
+                <version>${kumuluzee-cors.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
